Bug 1136735 - Ignore events if there's no SelectionCarets elements. r=ehsan

XUL has no CanvasFrame. Hence no SelectionCarets elements.
SelectionCarets should ignore the events if it cannot get its elements.